--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
   align-items: center;
   color: white;
   background: linear-gradient(to bottom, rgba(254, 178, 245, 0.25), rgba(254, 178, 245, 0));
-  /* 254,178,245 */
 }
 
 .logo {
@@ -84,6 +83,58 @@ body {
 
 .hero-image img {
   max-width: 500px;
+}
+
+.section-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 4em;
+  padding-bottom: 12em;
+}
+
+.title {
+  color: rgb(245, 105, 128);
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.watermelons {
+  display: flex;
+  justify-content: center;
+  gap: 4em;
+  margin-top: 4em;
+  flex-wrap: wrap;
+}
+
+.watermelon {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  width: 200px;
+  align-items: center;
+  text-align: center;
+}
+
+.watermelon img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 100%;
+  flex-shrink: 0;
+  border: solid 6px pink;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.watermelon.three img {
+  object-position: 50% 50%;
+}
+
+.watermelon .text {
+  color: #2d681b;
+  font-size: 18px;
+  max-width: 200px;
 }
 
 .links {
